--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.6.13",
