--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
+    "jodit-react": "^5.2.19",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
