--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.11.0",
     "dompurify": "^3.2.6",
     "firebase": "^12.0.0",
+    "focus-trap-react": "^11.0.4",
     "jodit-react": "^5.2.19",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
