--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@stripe/stripe-js": "^7.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "aos": "^2.3.4",
     "axios": "^1.11.0",
     "dompurify": "^3.2.6",
     "firebase": "^12.0.0",
     "focus-trap-react": "^11.0.4",
+    "framer-motion": "^12.23.12",
     "jodit-react": "^5.2.19",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
